--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "coverage": "jest --coverage"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.1",
     "@types/react-dom": "18.2.6",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
@@ -27,7 +30,6 @@
     "@types/react": "^18.2.14",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
-    "nodemon": "^3.0.1",
     "sass": "^1.63.6"
   }
 }
