--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals","prettier"],
+  "rules": {
+    "max-len": ["error", {"code": 80, "ignoreUrls": true}]
+  }
 }
