--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.14",
+    "eslint-config-prettier": "^8.8.0",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "sass": "^1.63.6"
