--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.2",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-date-pickers": "^6.10.1",
@@ -21,15 +20,21 @@
     "dayjs": "^1.11.9",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "i18next": "^23.3.0",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.1",
     "next": "13.4.9",
+    "next-i18next": "^14.0.0",
+    "next-translate": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.45.2",
+    "react-i18next": "^13.0.2",
     "styled-components": "^5.3.11",
     "typescript": "5.1.6"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.22.5",
+    "@mui/icons-material": "^5.14.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/node": "^20.4.2",
@@ -37,6 +42,8 @@
     "eslint-config-prettier": "^8.8.0",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
+    "l": "^0.6.0",
+    "react-hook-form": "^7.45.2",
     "sass": "^1.63.6"
   }
 }
