--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.9",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "formik": "^2.4.2",
     "i18next": "^23.3.0",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.1",
@@ -30,7 +31,8 @@
     "react-dom": "18.2.0",
     "react-i18next": "^13.0.2",
     "styled-components": "^5.3.11",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.22.5",
