--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.2.0",
     "@mui/material": "^5.14.2",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-date-pickers": "^6.10.1",
@@ -46,7 +47,7 @@
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "l": "^0.6.0",
-    "react-hook-form": "^7.45.2",
+    "react-hook-form": "^7.45.4",
     "sass": "^1.63.6"
   }
 }
