--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.1",
     "next": "13.4.9",
+    "next-auth": "^4.23.1",
     "next-i18next": "^14.0.0",
     "next-translate": "^2.5.2",
     "react": "18.2.0",
