--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "serve-json": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -18,6 +19,7 @@
     "@mui/material": "^5.14.2",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-date-pickers": "^6.10.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/react-dom": "18.2.6",
     "dayjs": "^1.11.9",
     "eslint": "8.44.0",
@@ -26,12 +28,15 @@
     "i18next": "^23.3.0",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.1",
+    "json-server": "^0.17.3",
     "next": "13.4.9",
     "next-i18next": "^14.0.0",
     "next-translate": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.0.2",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
     "styled-components": "^5.3.11",
     "typescript": "5.1.6",
     "yup": "^1.2.0"
